feat: DeliveryRule 테스트 작성 완료